testsuite/tests/dependent/should_fail/TypeSkolEscape.stderr
TypeSkolEscape.hs:9:52: error: [GHC-25897]
    • Couldn't match kind ‘v’ with ‘LiftedRep’
      Expected kind ‘*’, but ‘a’ has kind ‘TYPE v’
      ‘v’ is a rigid type variable bound by
        an explicit forall (v :: RuntimeRep) (a :: TYPE v)
        at TypeSkolEscape.hs:9:20
    • In the type ‘forall (v :: RuntimeRep) (a :: TYPE v). a’
      In the type synonym declaration for ‘Bad’

